--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
 					<p class="subtitle">introducing lucid theme</p>
 					<h1 class="title">Carefully crafted and <br> beautiful landing page.</h1>
 					<p class="text">Etiam ullamcorper et turpis eget hendrerit. Praesent varius risus mi, at elementum magna ultricies accumsan. Cras venenatis lacus sed dolor placerat tempus. Morbi blandit at neque ut imperdiet.</p>
-					<div class="buttons"><a href="#" class="button">download now</a><a href="#" class="button">view features</a></div>
+					<div class="buttons">
+						<a href="#" class="btn btn-fill">download now</a>
+						<a href="#" class="btn btn-empty">view features</a></div>
 				    </div>
 				</div>
 				<div class="col-sm-6"> 
