--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<title>Заголовок страницы</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
+	<link rel="stylesheet" href="css/fontawesome.min.css" />
+	<link rel="stylesheet" href="css/all.min.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/bootstrap-grid-3.3.1.min.css" />
 	<link rel="stylesheet" href="css/reset.css" />
@@ -142,6 +144,7 @@
 					<div class="col-xs-4"><a href="/" class="logo">logotype</a></div>
 					<div class="col-xs-8">
 						<nav class="menu">
+							<button class="btn-mobile"><i class="fas fa-bars"></i></button>
 							<ul>
 								<li><a href="">Home</a></li>
 								<li><a href="">Features</a></li>
